2014-05-12  Andreas Schwab  <schwab@suse.de>

	[BZ #16932]
	* nis/nss_nis/nis-hosts.c (internal_gethostbyname2_r)
	(_nss_nis_gethostbyname4_r): Return error if item length is larger
	than maximum RPC packet size.
	* nis/nss_nis/nis-initgroups.c (initgroups_netid): Likewise.
	* nis/nss_nis/nis-network.c (_nss_nis_getnetbyname_r): Likewise.
	* nis/nss_nis/nis-service.c (_nss_nis_getservbyname_r)
	(_nss_nis_getservbyport_r): Likewise.

2014-06-21  Allan McRae  <allan@archlinux.org>

	* NEWS: Mention CVE-2014-4043.

2014-06-11  Florian Weimer  <fweimer@redhat.com>

	[BZ #17048]
	* posix/spawn_int.h (struct __spawn_action): Make the path string
	non-const to support deallocation.
	* posix/spawn_faction_addopen.c
	(posix_spawn_file_actions_addopen): Make a copy of the pathname.
	* posix/spawn_faction_destroy.c
	(posix_spawn_file_actions_destroy): Adjust comment.  Deallocate
	path in all spawn_do_open actions.
	* posix/tst-spawn.c (do_test): Exercise the copy operation in
	posix_spawn_file_actions_addopen.

2014-06-03  Guo Yixuan  <culu.gyx@gmail.com>

	[BZ #16882]
	* nptl/sysdeps/sparc/sparc32/pthread_spin_lock.S
	(pthread_spin_lock): Branch out of spin loop to proper location.
	* nptl/sysdeps/sparc/sparc64/pthread_spin_lock.S
	(pthread_spin_lock): Likewise.

	* nptl/tst-spin4.c: New test.
	* nptl/Makefile (tests): Add tst-spin4.

2014-05-17  Jose E. Marchesi  <jose.marchesi@oracle.com>

	[BZ #16958]
	* sysdeps/sparc/sparc64/multiarch/memcpy-niagara2.S: Add missing
	membar to avoid block loads/stores to overlap previous stores.

2014-05-13  Sami Kerola  <kerolasa@iki.fi>

	* timezone/Makefile ($(objpfx)tzselect): Use zonedir instead
	current working directory

2014-05-16  Allan McRae  <allan@archlinux.org>

	* po/sv.po: Update Swedish translation from translation project.

2014-05-16  Aurelien Jarno  <aurelien@aurel32.net>

	[BZ #16943]
	* sysdeps/unix/sysv/linux/sparc/bits/resource.h: Declare prlimit
	and prlimit64.

2014-05-06  Aurelien Jarno  <aurelien@aurel32.net>
